# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-vhdl"
version       = "0.1.0"
description   = "VHDL Language support for for Vermilion"
publish       = false
edition       = { workspace = true }
license       = { workspace = true }
rust-version  = { workspace = true }
repository    = { workspace = true }
homepage      = { workspace = true }
documentation = { workspace = true }

[dependencies]
vermilion-core        = { workspace = true }
vermilion-diagnostics = { workspace = true }
vermilion-fmt         = { workspace = true }
vermilion-lang        = { workspace = true }

chumsky               = { workspace = true }
clap                  = { workspace = true, optional = true }
schemars              = { workspace = true, optional = true }
serde                 = { workspace = true, optional = true }
tendril               = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

graphviz-output = [ "vermilion-lang/graphviz-output" ]
vermilion-cli   = [ "dep:clap" ]
serde           = [ "dep:serde", "vermilion-fmt/serde", "vermilion-diagnostics/serde" ]
schema          = [ "serde", "dep:schemars", "vermilion-fmt/schema", "vermilion-diagnostics/schema" ]
tendril         = [ "dep:tendril", "vermilion-lang/tendril" ]
