# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion-xact"
description   = "IP-XACT Support for Vermilion"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
vermilion-diagnostics = { workspace = true }
vermilion-loc         = { workspace = true }
vermilion-macros      = { workspace = true }

bitmask-enum          = { workspace = true }
clap                  = { workspace = true, optional = true }
color-print           = { workspace = true, optional = true }
eyre                  = { workspace = true }
paste                 = { workspace = true }
phf                   = { workspace = true }
quick-xml             = { workspace = true }
schemars              = { workspace = true, optional = true }
serde                 = { workspace = true }

[dev-dependencies]
criterion  = { workspace = true }
proptest   = { workspace = true }
serde_test = { workspace = true }
test-log   = { workspace = true }

[features]
default   = []

cli       = [ "dep:clap" ]
color-dbg = [ "dep:color-print", "vermilion-diagnostics/color-dbg", "vermilion-loc/color-dbg" ]
schema    = [ "dep:schemars", "serde", "vermilion-diagnostics/schema" ]
serde     = [ "vermilion-diagnostics/serde" ]

[lints]
workspace = true
