# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion"
description   = "Verilog, SystemVerilog, and VHDL code linter, formatter, and language server"
default-run   = "vermilion"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
vermilion-constraints = { workspace = true, features = [ "schema", "vermilion-cli" ] }
vermilion-diagnostics = { workspace = true, features = [ "schema", "pretty-diagnostics" ] }
vermilion-fmt         = { workspace = true, features = [ "schema" ] }
vermilion-lang        = { workspace = true }
vermilion-liberty     = { workspace = true, features = [ "schema", "vermilion-cli" ] }
vermilion-lsp         = { workspace = true, features = [ "transport", "trace", "trace-server" ] }
vermilion-verilog     = { workspace = true, features = [ "schema", "vermilion-cli" ] }
vermilion-vhdl        = { workspace = true, features = [ "schema", "vermilion-cli" ] }

clap                  = { workspace = true }
clap_complete         = { workspace = true }
color-eyre            = { workspace = true }
color-print           = { workspace = true }
colorchoice           = { workspace = true }
console-subscriber    = { workspace = true }
crossterm             = { workspace = true }
directories           = { workspace = true }
eyre                  = { workspace = true }
fluent-uri            = { workspace = true }
notify                = { workspace = true }
pulldown-cmark        = { workspace = true }
ratatui               = { workspace = true }
rayon                 = { workspace = true }
schemars              = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
syntect               = { workspace = true }
sysinfo               = { workspace = true }
tokio                 = { workspace = true }
tokio-util            = { workspace = true }
toml                  = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

# async-debug = [ "dep:console-subscriber" ]
