# SPDX-License-Identifier: BSD-3-Clause
[package]
name          = "vermilion"
description   = "Verilog, SystemVerilog, and VHDL code linter, formatter, and language server"
default-run   = "vermilion"
documentation = { workspace = true }
edition       = { workspace = true }
homepage      = { workspace = true }
license       = { workspace = true }
publish       = { workspace = true }
repository    = { workspace = true }
rust-version  = { workspace = true }
version       = { workspace = true }

[dependencies]
mercurous             = { workspace = true, features = [ "transport", "trace", "trace-server" ] }
vermilion-constraints = { workspace = true, features = [ "cli", "color-dbg", "schema" ] }
vermilion-dap         = { workspace = true, features = [ "color-dbg", "transport", "trace", "trace-server" ] }
vermilion-diagnostics = { workspace = true, features = [ "color-dbg", "pretty", "render", "schema" ] }
vermilion-fmt         = { workspace = true, features = [ "color-dbg", "schema" ] }
vermilion-io          = { workspace = true, features = [ "color-dbg" ] }
vermilion-lang        = { workspace = true, features = [ "color-dbg" ] }
vermilion-liberty     = { workspace = true, features = [ "cli", "color-dbg", "schema" ] }
vermilion-loc         = { workspace = true, features = [ "color-dbg" ] }
vermilion-lsp         = { workspace = true, features = [ "color-dbg", "transport", "trace", "trace-server" ] }
vermilion-macros      = { workspace = true }
vermilion-verilog     = { workspace = true, features = [ "cli", "color-dbg", "schema" ] }
vermilion-vhdl        = { workspace = true, features = [ "cli", "color-dbg", "schema" ] }
vermilion-xact        = { workspace = true, features = [ "cli", "color-dbg", "schema" ] }

bumpalo               = { workspace = true }
chrono                = { workspace = true }
clap                  = { workspace = true }
clap_complete         = { workspace = true }
color-eyre            = { workspace = true }
color-print           = { workspace = true }
colorchoice           = { workspace = true }
console-subscriber    = { workspace = true }
crossterm             = { workspace = true }
directories           = { workspace = true }
eyre                  = { workspace = true }
fluent-uri            = { workspace = true }
notify                = { workspace = true }
pulldown-cmark        = { workspace = true }
ratatui               = { workspace = true }
rayon                 = { workspace = true }
schemars              = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
syntect               = { workspace = true }
sysinfo               = { workspace = true }
tokio                 = { workspace = true }
tokio-util            = { workspace = true }
toml                  = { workspace = true }
tracing               = { workspace = true }
tracing-subscriber    = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
proptest  = { workspace = true }
test-log  = { workspace = true }

[features]
default = []

# async-debug = [ "dep:console-subscriber" ]

[lints]
workspace = true
